--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongodb": "^3.0.7"
+    "mongodb": "^3.0.7",
+    "nodemon": "^1.17.4"
   }
 }
